# AVANE

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  README.md  index.html  params.json
android_example/: .actionScriptProperties  .gitignore  .project
android_example/sprite-sheet/: atlas.xml
android_example/src/: Main-app.xml  Main.as  StarlingRoot.as
example/: .actionScriptProperties  .gitignore  .project
example/bin-debug/: AVANESample-app.xml  AVANESample.swf
example/bin-release-temp/: AVANESample-app.xml  AVANESample.swf
example/libs/: FiraSansRegular.swc
example/sprite-sheet/: atlas.xml
example/src/: AVANESample-app.xml  AVANESample.as  StarlingRoot.as
ios_example/: .actionScriptProperties  .project  ld64
ios_example/src/: Main-app.xml  Main.as  StarlingRoot.as
native_extension/: .actionScriptProperties  .flexLibProperties  .gitignore  .project
native_extension/ane/: .gitignore  build-android-release.bat  build-release.bat  build_android_release.sh  build_ios.sh  build_osx_debug.sh  clean.bat  extension_android.xml  extension_ios.xml  extension_win.xml
native_library/: .gitignore
native_library/android/LibAVANEExample/libAVANE/src/main/cpp/: CMakeLists.txt  avane-lib.cpp
native_library/android/LibAVANEExample/libAVANE/src/main/cpp/armeabi-v7a/ffmpeg/: cmdutils.c  cmdutils.h  config.h  ffmpeg.h  ffmpeg_opt.c
native_library/android/LibAVANEExample/libAVANE/src/main/cpp/armeabi-v7a/ffmpeg/libavutil/: ffversion.h
native_library/android/LibAVANEExample/libAVANE/src/main/cpp/x86/ffmpeg/: config.h  ffmpeg.c  x264_config.h
native_library/include/: .gitignore  ANEhelper.h  AVANE.h  Constants.hpp  ObjCInterface.h  Utils.h
(+283 files in other folders)
